  * Startup sequence now shows which settings were used
  * Changed the application.yml setting of echi_update_agent_data to echi_process_dat_files
  * Refactored logging mechanism
  * Added support for additional '.dat' files including aux_rsn.dat, cwc.dat and vdn.dat
  * Added utf8 encoding option to config/database.yml
  * Refactored FTP management into a new class
  * FTP now supports setting an alternative port by setting 'echi_port' in the application.yml file
  * Added option in config/application.yml, 'max_ftp_sessions', to allow for multiple ftp sessions to be used to increase ftp interaction performance
* Bug fix(es):  

== 0.3.5 2007-12-03

* Major enhancement(s):
* Minor enhancement(s):
* Bug fix(es):  
  * Fixed a bug with the ASCII processing that left out the agent_released field in the table and data, causing a misalignment.

== 0.3.6 2007-12-20

* Major enhancement(s):
* Minor enhancement(s):
  * Added a Signal.trap on interrupt to echi-converter executable for a more graceful shutdown 
* Bug fix(es):  
  * The bit operators in the boolean fields are now processed properly for BINARY file types (found by user Chun Lim)

== 0.3.7 2008-03-25

* Major enhancement(s):
* Minor enhancement(s):
  * Added support for the dat files: acd.dat, split.cat, tkgrp.dat and vector.dat
  * Added support for turning email notifications on and off - FR#18889
  * Changed the default logging in application.yml to 'NONE' from 'DEBUG'
  * Added standard_version14.yml and extended_version14.yml
* Bug fix(es):  
  * Will now archive 0 length files and not stop the Windows Service - Bug#18888

== 0.3.8 2008-04-28

* Major enhancement(s):
* Minor enhancement(s):
* Bug fix(es):  
  * #18888 with zero byte files
  * #19437 Oracle table names too long in v0.3.7
  * #19490 with inverted fileversion and filenumber
  * #19493 issue with the extra byte read on binary files